sticking out links fix

--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -15,6 +15,7 @@ p, .youtube-embed {
 a:not(.button) {
 	color: var(--link-color);
  	transition: opacity .2s;
+  word-break: break-all;
 }
 
 h1, h2, h3, h4, h5 {
